<resources>
    <string name="app_name">Freelance Client</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_first_screen">FirstScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="server_ip_address">IP address of server</string>
    <string name="title_task_list">Tasks</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="technologies">Technologies</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="Title">Title</string>
    <string name="Desc">Description</string>
    <string name="create_task">Create task</string>
    <string name="loading">Loading</string>
    <string name="my_tasks">My tasks</string>
    <string name="not_completed">Not completed</string>
    <string name="all">All my tasks</string>
    <string name="create_new_task">Create new task</string>
    <string name="all_tasks">All tasks</string>
    <string name="view">View</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="accept">Accept</string>
    <string name="Save">Save</string>
    <string name="Performers" >Performers</string>
    <string name="choose">Choose</string>
</resources>
