<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="diplom.oleg.client.android.activity.CreateTaskActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Dark.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.Dark.PopupOverlay" ></android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/title"
                    android:hint="@string/Title" />

                <EditText
                    android:gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/desc"
                    android:hint="@string/Desc" />
                <include layout="@layout/card_technologies"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create"
                android:layout_weight="1" />

            <Button
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
