<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="diplom.oleg.client.android.activity.FirstScreenActivity">

    <!--
        <include layout="@layout/content_first_screen" />
    -->

    <android.support.percent.PercentRelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:id="@+id/currentProjectCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_margin="25dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/my_tasks"
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/not_completed"
                        android:id="@+id/textView"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View"
                        android:id="@+id/buttonMyNotCompletedTasks"
                         />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View"
                        android:id="@+id/buttonAllMyTasks" />
                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_task"
                    android:id="@+id/button2" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_margin="25dp"
            android:layout_below="@+id/currentProjectCard"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/all_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAllTasks"
                    android:layout_gravity="right"
                    android:text="@string/view" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <ProgressBar
            android:indeterminate="true"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line_Progress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_above="@+id/currentProjectCard"
            android:layout_alignParentStart="true" />

        <LinearLayout
            app:popupTheme="@style/AppTheme.Dark.PopupOverlay"
            android:background="@color/primary"
            app:layout_widthPercent="100%"
            app:layout_aspectRatio="178%"
            android:elevation="2dp"
            android:id="@+id/imageView" >

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/avatar_empty"
                    android:id="@+id/avatar"
                     />
            </LinearLayout>


            <LinearLayout
                android:padding="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fName"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    tools:text="LastName"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lName"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    tools:text="FirstName"
                    android:layout_below="@+id/fName"
                    android:layout_alignParentEnd="true" />

                <android.support.v7.widget.AppCompatButton
                    android:text="Edit profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editProfile"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/lName"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="29dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout >




</android.support.design.widget.CoordinatorLayout>
